--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "quick-bill-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec ts-node -P tsconfig.json server.ts"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,26 @@
     "url": "https://github.com/wassimD28/QuickBill-api/issues"
   },
   "homepage": "https://github.com/wassimD28/QuickBill-api#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
+    "pg-promise": "^11.10.2",
+    "sequelize": "^6.37.5",
+    "sequelize-typescript": "^2.1.6"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.1",
+    "@types/pg": "^8.11.10",
+    "@types/sequelize": "^4.28.20",
+    "nodemon": "^3.1.7",
+    "sequelize-cli": "^6.6.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
+  }
 }
