--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "pg-promise": "^11.10.2",
+    "quick-bill-api": "file:",
     "sequelize": "^6.37.5",
     "sequelize-typescript": "^2.1.6"
   },
